<resources>
    <string name="app_name">iParish</string>
    <string name="toast_Logged">You are logged in</string>
    <string name="toast_Login">Please log in</string>
    <string name="enter_email">Please enter a valid email address</string>
    <string name="enter_password">Please enter password</string>
    <string name="error_again">Error Try again</string>
    <string name="logout">Log out</string>
    <string name="email_hint">Email</string>
    <string name="passwd_hint">Password</string>
    <string name="registered">…or click here to sign up now!</string>
    <string name="register">Sign in</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="label_buy_now">Pay now</string>
    <string name="pln">PLN</string>
    <string name="label_saveCard">SAVE</string>
    <string name="your_prayer">Your prayer</string>
    <string name="intention">Intention</string>
    <string name="mobile_number_explanation">SMS is required on this number</string>
    <string name="payment_confirmation_title">Confirm before purchase</string>
    <string name="card_number">Card number</string>
    <string name="card_expiry_date">Card expiry date</string>
    <string name="card_cvv">Card CVV</string>
    <string name="postal_code">Postal code</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm">Confirm</string>
    <string name="purchase_thanks">Thank you for purchase</string>
    <string name="cancel">Cancel</string>
    <string name="form_not_complete_info">Please complete the form</string>
    <string name="data_updated">Data updated</string>
    <string name="name_hint">Your first name</string>
    <string name="surname_hint">Your last name</string>
    <string name="save">Save</string>
    <string name="your_parish">Your parish</string>
    <string name="your_phone">Your phone number:</string>
    <string name="your_last_name">Your last name</string>
    <string name="your_first_name">Your first name</string>
    <string name="praise_god">Praise God</string>
    <string name="quick_offering">Quick offering</string>
    <string name="custom_offering">Custom offering</string>
    <string name="button_user_form">Profile</string>
    <string name="button_payment">Payment</string>
    <string name="dark_mode">Release Evil</string>
    <string name="settings">Settings</string>
    <string name="nav_to_parish">Navigate to parish</string>
    <string name="generosity_is_virtue">Generosity is virtue!</string>
    <string name="click_to_make_offering">Click To Make Offering</string>
    <string name="minus">-</string>
    <string name="currency">€</string>
    <string name="plus">+</string>
    <string name="confession_descr">Pay for your sins!</string>
    <string name="funeral_descr">Pay for the funeral</string>
    <string name="holy_mass_descr">Pay for the Holy Mass</string>
    <string name="set_up_parish_first">Please choose your parish first. Go to Settings, then Profile</string>
    <string name="settings_updated">Profile settings updated!</string>
</resources>
