<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.SettingsFragment">

    <Button
        android:id="@+id/button_payment"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/button_payment"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/custom_button"
        app:layout_constraintBottom_toTopOf="@+id/button_user_form"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

  <Button
    android:id="@+id/button_user_form"
    android:layout_width="250dp"
    android:layout_height="60dp"
    android:background="@drawable/custom_button"
    android:text="@string/button_user_form"
    android:textAllCaps="false"
    android:textColor="#FFFFFF"
    android:textSize="20sp"
    app:layout_constraintBottom_toTopOf="@+id/dark_mode"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.496"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/button_payment" />

  <Button
    android:id="@+id/dark_mode"
    android:layout_width="250dp"
    android:layout_height="60dp"
    android:background="@drawable/custom_button"
    android:text="@string/dark_mode"
    android:textAllCaps="false"
    android:textColor="#FFFFFF"
    android:textSize="20sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.503"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/button_user_form" />

</androidx.constraintlayout.widget.ConstraintLayout>
